--- a/.gitignore
+++ b/.gitignore
@@ -146,4 +146,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Distribution folder
+/dist
+
 # End of https://www.gitignore.io/api/node,windows,archives
