--- a/.gitignore
+++ b/.gitignore
@@ -146,7 +146,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# Distribution folder
+# Distribution folder and other non-important folders
 /dist
+/resources
 
 # End of https://www.gitignore.io/api/node,windows,archives
