--- a/.gitignore
+++ b/.gitignore
@@ -150,4 +150,7 @@ $RECYCLE.BIN/
 dist/
 resources/
 
+# Custom files to ignore
+.gulpfile.js
+
 # End of https://www.gitignore.io/api/node,windows,archives
