--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "gulp-htmlmin": "^5.0.1",
-    "gulp-tinifier": "^1.0.2"
+    "gulp-tinifier": "^1.0.2",
+    "lodash.template": "^4.5.0"
   }
 }
